# CarBase

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml
backend/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/src/api/: serializers.py  urls.py  views.py
backend/src/catalog/: admin.py  models.py
backend/src/main/: urls.py
backend/src/main/management/commands/: ensure_oidc_client.py  ensure_superuser.py
backend/src/main/settings/: base.py
backend/src/main/templates/account/: base_manage_email.html  base_manage_password.html
backend/src/main/templates/allauth/elements/: alert.html  badge.html  button.html  button__entrance.html  button_group.html  field.html  fields.html  form.html  h1.html  h1__entrance.html  h2.html  hr.html  p.html  panel.html
backend/src/main/templates/allauth/layouts/: base.html  entrance.html  manage.html
backend/src/users/: __init__.py  admin.py  forms.py  models.py
backend/src/users/migrations/: __init__.py
